# snowpipe-streaming-rs

./: AGENTS.md  Cargo.toml  README.md
.github/prompts/: tasks.prompt.md
.github/workflows/: rust.yml
.specify/templates/: plan-template.md
examples/: example.rs
specs/001-adding-tests/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-adding-tests/contracts/: README.md  channel_status_response.json
specs/002-programmatic-jwt-generation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-programmatic-jwt-generation/contracts/: oauth2_token_request.json  oauth2_token_response.json
specs/003-encrypted-pem-support/: plan.md  spec.md  tasks.md
specs/004-config-arg-constructor/: plan.md  spec.md  tasks.md
specs/005-complete-readme/: tasks.md
specs/006-fix-jwt-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-jwt-automatic-refresh/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-simple-jwt-refresh/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: channel.rs  client.rs  config.rs  errors.rs  lib.rs  request_context.rs  token_cache.rs  types.rs
src/client/: crypto.rs  impls.rs  mod.rs
src/retry/: coordinator.rs  mod.rs  outcome.rs  plan.rs
src/telemetry/: refresh.rs
src/tests/: jwt.rs  mod.rs  retry_401_failure.rs  retry_401_success.rs  retry_429_backoff.rs  test_support.rs
src/token/: envelope.rs  guard.rs  mod.rs  policy.rs
tests/: integration.rs  retry_401_failure.rs  retry_401_success.rs  retry_429_backoff.rs
tests/common/: time.rs
tests/contract/: client_auth.rs  jwt_build.rs  request_send.rs  token_guard_ensure.rs
tests/fixtures/: append_rows_response.json  id_rsa.pem  id_rsa_encrypted.pem  open_channel_response.json  private_key.pem
tests/integration/: expired_retry.rs  refresh_escalates_after_retry_budget.rs  refresh_triggers_before_expiry.rs
tests/unit/: jwt.rs  key_parsing.rs  mod.rs  refresh_policy_tests.rs  refresh_telemetry_tests.rs  retry_plan_tests.rs  url.rs
(+6 files in other folders)
