[package]
name = "snowpipe-streaming"
version = "0.1.0"
edition = "2024"
publish = false

[features]
unstable-example = []

[dependencies]
aws-config = { version = "1.8.6" }
aws-sdk-secretsmanager = { version = "1.87.0" }
jiff = { version = "0.2.15", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tracing = { version = "0.1.41" }
jsonwebtoken = { version = "9.3.0" }
pem = "3.0.4"
uuid = { version = "1.10.0", features = ["v4"] }
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6.0"
tracing-subscriber = "0.3.18"

[[example]]
name = "example"
path = "examples/example.rs"
required-features = ["unstable-example"]
